--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>this is the site was created by sunny</p>
         <img class="portrait" src="/img/pic.jpeg">
     </div>
     
